--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://tylerntran.github.io/react-gh-pages",
+  "homepage": "https://tylerntran.github.io",
   "private": true,
   "engines": {
     "node": ">=12.x"
